--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "scss": "node-sass -w assets/scss/stylesheet.scss  assets/css/stylesheet.css --output-style compressed"
+    "scss": "node-sass -w assets/scss/stylesheet.scss  assets/css/stylesheet.css --output-style compressed",
+    "qwe" : "node-sass --watch assets/scss/indexpankaj.scss  assets/css/indexpankaj.css --output-style compressed"
   },
   "dependencies": {
     "node-sass": "^7.0.1"
